--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node bot.js"
+    "start": "node bot.js",
+    "crawl": "node crawler.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "twit": "^2.2.9"
+    "twit": "^2.2.9",
+    "sqlite3": "^3.1.8"
   }
 }
